[metadata]
name = ctk_color_picker_alpha
version = 0.0.1
author = Kolyn Lin
author_email = kanzakimakai27875628@gmail.com
description = Forked from ctk_color_picker by Akash Bora. This version adds color alpha as a parameter.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kolyn090/CTkColorPickerAlpha.git
classifiers =
    Programming Language :: Python :: 3
    License :: CC0-1.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.11
include_package_data = True
